# legal-rag

./: CLAUDE.md  MCP servere.txt  pyproject.toml  settings.json
continuous-learning-v2/agents/: observer-loop.sh  start-observer.sh
continuous-learning-v2/hooks/: observe.sh
docs/: Koberbrev skabelon.docx  RAG Pipeline.md  RAG.md  SCALING_NOTES.md  commands.md  jurateam-root-guide.md  jurateam-skills-guide.md
install/: setup.md
jurateam-plugin/: package.json
jurateam-plugin/skills/juridisk-brevskriver/: SKILL.md
jurateam-plugin/skills/juridisk-dokumentudtraekker/: SKILL.md
jurateam-plugin/skills/juridisk-risikovurderer/: SKILL.md
koberbrev/: SKILL.md
koberbrev/assets/: test_values.json
koberbrev/references/: agent-prompts.md  approved-sites.md  placeholder-notes.md  supabase-setup.md
koberbrev/scripts/: fill_document.py  setup_supabase.sql
legal-rag.skill/: GENERATION.md  SKILL.md
legal-rag.skill/legal-rag.skill/: SKILL.md
legal-rag.skill/legal-rag.skill/references/: features-diversity-reranking.md  schema-and-performance.md
legal-rag.skill/references/: advanced-danish-legal-terminology.md  core-hybrid-search.md  core-ingestion.md  core-mcp-tools.md  features-source-filtering.md
legal-search/: SKILL.md
legal-search/rules/: cite-source-and-section.md  multi-query-strategy.md  route-by-document.md  search-before-answering.md
mcp-builder-information-site-noapi/: SKILL.md
mcp-guide/: SKILL.md
rag/: agent.py  cli.py  main.py  mcp_server.py  sync_service.py  watch_service.py
word-template-converter/: SKILL.md
(+22 files in other folders)
